--- a/company/company01.html
+++ b/company/company01.html
@@ -144,7 +144,7 @@
  
 
   <div class="line-001"></div>
-  <div>
+  <div class="history">
     <div class="xtx-001">HISTORY</div>
     <div class="xtx-002">설립이후 파이브스톤이 걸어온 길을 알립니다.</div>
     <div>
