--- a/member/join.html
+++ b/member/join.html
@@ -29,9 +29,9 @@
          window.open("namecheck.html", "회원가입여부확인", "width=500, height=500, left=100, top=50"); }
       //   // 회원가입 여부 확인 팝업 창 뜨는 법 
 
-        function joinclick () {
-          alert("정보가 올바르지 않습니다.");
-        }
+        // function joinclick () {
+        //   alert("정보가 올바르지 않습니다.");
+        // }
     
   </script>
 
