--- a/member/searchid.html
+++ b/member/searchid.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>회운가입 여부 및 실명확인</title>
+  <title>회원아이디 찾기</title>
 
-  <link rel="stylesheet" href="/css/member/namecheck.css">
+  <link rel="stylesheet" href="/css/member/idFind.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -14,35 +14,24 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 
-<script>
-    function joinpass () {
-        window.open ("join3.html","회원가입란");}
-</script>
-  
 </head>
-<!-- 회원가입 여부 및 실명 확인 -->
-
-<div class="whole">
-
-<div class="check">
-
-    <p>회원가입여부 및 실명확인</p>
+<body>
+<div>
+    <h2>아이디 중복확인</h2>
 </div>
 
-<div class="explain">
-    <span id="a">등록된 회원이 아닙니다.</span><br>
-    <span>회원으로 가입하시면 보다 다양한 서비스를 받으실 수 있습니다.</span>
+<div>
+    원하는 아이디를 입력하세요.
 </div>
 
-<div class="joinbutton">
-    <button id="buttona" >
-        <img src="/img/member/btn_join.gif" onclick="joinpass()">
-            </button>
+<div>
+    <input type="text"> 
+    <img src="/img/member/btn_search.gif">
 </div>
 
-<div class="closebutton">
-    <button id="buttonb"  ><img src="/img/member/btn_close.gif" ></button>
+<div>
+    <img src="/img/member/btn_close.gif">
 </div>
 
-</div>
 </body>
+</html>
