--- a/customer/customer01.html
+++ b/customer/customer01.html
@@ -124,7 +124,10 @@
       </tr>
       <tr class="t-3">
         <td style="padding: 100px;" class="trt-01">설명</td>
-        <td style="padding: 10px;"><input type="text" style=" width: 100%; height: 400px;"></td>
+        <td style="padding: 10px;">
+        <textarea class="textarea"></textarea>
+        </td>
+        
       </tr>
    </table>
 
