--- a/customer/customer02.html
+++ b/customer/customer02.html
@@ -23,6 +23,10 @@
       $('#header').load("/header.html");     
       $('#footer').load("/footer.html");
     });
+
+    function pwcheck () {
+      window.open("customer02_3.html","비밀번호입력" , "width=500, height=500")
+    };
   </script>
 
 </head>
@@ -105,63 +109,63 @@
         </tr>
         <tr>
           <td class="num">9</td>
-          <td><img src="/img/customer/icon_sct.gif"><a href="#">문의사항에 대해 자세한 답변 부탁합니다.</a></td>
+          <td onclick="pwcheck()"><img src="/img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
           <td class="writer" >loaker</td>
           <td class="dat" >2022-07-04</td>
         </tr>
 
         <tr>
           <td class="num">8</td>
-          <td><img src="/img/customer/icon_sct.gif"><a href="#">문의사항에 대해 자세한 답변 부탁합니다.</a></td>
+          <td onclick="pwcheck()" ><img src="/img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
           <td class="writer" >loaker</td>
           <td class="dat" >2022-07-04</td>
         </tr>
 
         <tr>
           <td class="num">7</td>
-          <td><img src="/img/customer/icon_sct.gif"><a href="#">문의사항에 대해 자세한 답변 부탁합니다.</a></td>
+          <td onclick="pwcheck()" ><img src="/img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
           <td class="writer" >loaker</td>
           <td class="dat" >2022-07-04</td>
         </tr>
 
         <tr>
           <td class="num" >6</td>
-          <td><img src="/img/customer/icon_sct.gif"><a href="#">문의사항에 대해 자세한 답변 부탁합니다.</a></td>
+          <td onclick="pwcheck()" ><img src="/img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
           <td class="writer" >loaker</td>
           <td class="dat" >2022-07-04</td>
         </tr>
 
         <tr>
           <td class="num">5</td>
-          <td><img src="/img/customer/icon_sct.gif"><a href="#">문의사항에 대해 자세한 답변 부탁합니다.</a></td>
+          <td onclick="pwcheck()" ><img src="/img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
           <td class="writer" >loaker</td>
           <td class="dat" >2022-07-04</td>
         </tr>
 
         <tr>
           <td class="num" >4</td>
-          <td><img src="/img/customer/icon_sct.gif"><a href="#">문의사항에 대해 자세한 답변 부탁합니다.</a></td>
+          <td onclick="pwcheck()" ><img src="/img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
           <td class="writer" >loaker</td>
           <td class="dat" >2022-07-04</td>
         </tr>
 
         <tr>
           <td class="num" >3</td>
-          <td><img src="/img/customer/icon_sct.gif"><a href="#">문의사항에 대해 자세한 답변 부탁합니다.</a></td>
+          <td onclick="pwcheck()" ><img src="/img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
           <td class="writer" >loaker</td>
           <td class="dat" >2022-07-04</td>
         </tr>
 
         <tr>
           <td class="num" >2</td>
-          <td><img src="/img/customer/icon_sct.gif"><a href="#">문의사항에 대해 자세한 답변 부탁합니다.</a></td>
+          <td onclick="pwcheck()" ><img src="/img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
           <td class="writer" >loaker</td>
           <td class="dat" >2022-07-04</td>
         </tr>
 
         <tr>
           <td class="num" >1</td>
-          <td><img src="/img/customer/icon_sct.gif"><a href="#">문의사항에 대해 자세한 답변 부탁합니다.</a></td>
+          <td onclick="pwcheck()" ><img src="/img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
           <td class="writer">loaker</td>
           <td class="dat">2022-07-04</td>
         </tr>
