--- a/customer/customer03.html
+++ b/customer/customer03.html
@@ -23,6 +23,10 @@
       $('#header').load("/header.html");     
       $('#footer').load("/footer.html");
     });
+
+    function question () {
+      window.open("customer03_1.html","FAQ상세") 
+    }
   </script>
 
 </head>
@@ -102,27 +106,27 @@
       
       <tr>
         <th>질문</th>
-        <td><a href="">자주하는 질문입니다.</a></td>
+        <td onclick="question()" >자주하는 질문입니다.</td>
       </tr>
 
       <tr>
         <th>질문</th>
-        <td><a href="">자주하는 질문입니다.</a></td>
+        <td onclick="question()" >자주하는 질문입니다.</td>
       </tr>
 
       <tr>
         <th>질문</th>
-        <td><a href="">자주하는 질문입니다.</a></td>
+        <td onclick="question()" >자주하는 질문입니다.</td>
       </tr>
 
       <tr>
         <th>질문</th>
-        <td><a href="">자주하는 질문입니다.</a></td>
+        <td onclick="question()" >자주하는 질문입니다.</td>
       </tr>
 
       <tr>
         <th>질문</th>
-        <td><a href="">자주하는 질문입니다.</a></td>
+        <td onclick="question()" >자주하는 질문입니다.</td>
       </tr>
 
     </table>
