--- a/member/join.html
+++ b/member/join.html
@@ -25,8 +25,8 @@
     });
 
     
-       function joinclick() { 
-         window.open("namecheck.html", "회원가입여부확인", "width=500, height=500, left=100, top=50"); }
+       function joinpass() { 
+         window.open("namecheck.html", "회원가입란","width=480, height=380"); }
       //   // 회원가입 여부 확인 팝업 창 뜨는 법 
 
         // function joinclick () {
@@ -84,7 +84,7 @@
       <input id="a" type="text" value="">
     </div>
         
-    <div id="but"><button id="button1" onclick="joinclick()" >확인</button></div> 
+    <div id="but"><button id="button1" onclick="joinpass()" >확인</button></div> 
 
 </div>
   
