--- a/member/passwordFind.html
+++ b/member/passwordFind.html
@@ -58,7 +58,7 @@
   
           <div class="find4">
             <button class="button2">
-              <img src="/img/member/btn_close.gif">
+              <img src="/img/member/btn_close.gif" onclick="self.close()">
                 </button>
           </div>
   </div>
