--- a/community/community01.html
+++ b/community/community01.html
@@ -23,6 +23,10 @@
       $('#header').load("/header.html");     
       $('#footer').load("/footer.html");
     });
+
+    function searchbutton(){
+      alert("검색어를 정확히 입력하세요.")
+    };
   </script>
 
 </head>
@@ -104,31 +108,31 @@
        
         <tr>
           <td>5</td>
-          <td>새로운 공지사항을 알려드립니다.</td>
+          <td><a href="/community/community01_1.html">새로운 공지사항을 알려드립니다.</a> </td>
           <td>2022-07-01</td>
         </tr>
 
         <tr>
           <td>4</td>
-          <td>새로운 공지사항을 알려드립니다.</td>
+          <td><a href="/community/community01_1.html">새로운 공지사항을 알려드립니다.</a> </td>
           <td>2022-07-01</td>
         </tr>
 
         <tr>
           <td>3</td>
-          <td>새로운 공지사항을 알려드립니다.</td>
+          <td><a href="/community/community01_1.html">새로운 공지사항을 알려드립니다.</a> </td>
           <td>2022-07-01</td>
         </tr>
 
         <tr>
           <td>2</td>
-          <td>새로운 공지사항을 알려드립니다.</td>
+          <td><a href="/community/community01_1.html">새로운 공지사항을 알려드립니다.</a> </td>
           <td>2022-07-01</td>
         </tr>
 
         <tr>
           <td>1</td>
-          <td>새로운 공지사항을 알려드립니다.</td>
+          <td><a href="/community/community01_1.html">새로운 공지사항을 알려드립니다.</a> </td>
           <td>2022-07-01</td>
         </tr>
 
@@ -147,7 +151,7 @@
 
       <input type="text">
 
-      <button class="but" href="#"><img src="/img/product/search.gif"></a></button>
+     <button class="but"><img src="/img/product/search.gif" style="cursor: pointer;" onclick="searchbutton()"></button>
   </div>
   <!-- 푸터 -->
   <div id="footer"></div>
