--- a/customer/customer02_3.html
+++ b/customer/customer02_3.html
@@ -7,7 +7,7 @@
   <title>비밀번호 확인</title>
 
   <!-- My CSS -->
-  <link rel="stylesheet" href="/css/customer/checkPW.css">
+  <link rel="stylesheet" href="/css/customer/customer02_3.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -15,28 +15,40 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 
+  <script>
+
+   function confirm () {
+      alert ("비밀번호가 일치하지 않습니다. 다시 한번 확인해주세요.")
+   }
+
+  </script>
 </head>
 <body>
-
-   <div>
+   
+   <div class="input">
+   
+   <div class="pw">
       <p>비밀번호입력</p>
    </div>
 
-   <div>
+   <div class="sentence1">
     <p>글 작성시 입력한 비밀번호를 입력하세요.</p>
    </div>
 
-   <div>
+   <div class="pwbox">
     <img src="/img/customer/txt_pass.gif">
     <input type="password">
    </div>
 
-   <div>
-    <img src="/img/customer/btn_confirm.gif" alt="">
+   <div class="confirmbutton">
+    <img src="/img/customer/btn_confirm.gif" onclick="confirm()">
    </div>
 
-   <div>
-    <img src="/img/customer/btn_close.gif" alt="">
+   <div class="closebutton">
+    <img src="/img/customer/btn_close.gif" onclick="onclick= self.close()">
    </div>
+
+</div>
+
 </body>
 </html>
