--- a/customer/customer03_1.html
+++ b/customer/customer03_1.html
@@ -23,6 +23,10 @@
       $('#header').load("/header.html");     
       $('#footer').load("/footer.html");
     });
+
+    function listbox1 () {
+      window.open("customer03.html","이전화면")
+    };
   </script>
 
 </head>
@@ -90,8 +94,30 @@
   </nav>
 
   <!-- FAQ : 상세 -->
-  
-  
+  <div>
+  <div class="faq1">
+    <h2>FAQ</h2>
+    <p>The design and maintenance are excellent.</p>
+  </div>
+
+  <div class="box">
+    <table>
+      <tr>
+        <th>질문</th>
+        <td>자주하는 질문 모음입니다.</td>
+      </tr>
+
+      <tr>
+        <td>자주하는 질문 모음입니다.</td>
+      </tr>
+    </table>
+
+  </div>
+
+  <div class="list1">
+    <img src="/img/customer/list.gif" style="cursor: pointer;" onclick="listbox1()">
+  </div>
+</div>
   <!-- 푸터 -->
   <div id="footer"></div>
 
