--- a/member/join3.html
+++ b/member/join3.html
@@ -64,7 +64,10 @@
             <span>-회원님의 개인정보를 신중하게 보호하고 있으며 회원님의 동의 없이는 기재하신 회원정보가 누출되지 않습니다. </span><br>
             <span>자세한 내용은 개인정보보호정책에서 확인하세요.</span>
         </div>
-
+        <!-- 사용자가 정보를 입력할 수 있도록 만들어진 웹 요소 -->
+        <!-- id, class, name 값으로 접근 -->
+        <!-- 폼 배열을 사용해 접근 -->
+<form action="#" name="joinForm">
       <div class="topspan">
         <span>기본정보</span>
             </div>
@@ -74,7 +77,7 @@
             <table border="1" >
                 <tr id="tr1" >
                    <td id="td1" ><span>아이디</span></td> 
-                   <td id="td2" ><input type="text" style="width: 130px;" ><img src="/img/member/btn_iddupl.gif" alt="" style="margin-left: 10px; "><span>  (영문 소문자, 숫자4~16자)</span></td>
+                   <td id="td2" ><input type="text" style="width: 130px;"><img src="/img/member/btn_iddupl.gif" alt="" style="margin-left: 10px; "><span>  (영문 소문자, 숫자4~16자)</span></td>
                 </tr>
 
                 <tr id="tr1" >  
@@ -124,7 +127,7 @@
                 </tr>
 
                 <tr id="tr1" >
-                    <td id="td1" ><span>비밀번호 학인 시 답변</span></td>
+                    <td id="td1" ><span>비밀번호 확인 시 답변</span></td>
                     <td id="td2" ><input type="text" style="width: 200px;"></td>
                 </tr>
 
@@ -141,19 +144,32 @@
             </table>
 
         </div> 
-        
+</form>
       <div class="abc"> <span>부가정보</span></div>
 
        <hr>
 
+
         <div class="abcd">
-            <img src="/img/member/btn_confirm.gif" alt="">
-            <img src="/img/member/btn_cancel.gif" alt="">
+            <img src="/img/member/btn_confirm.gif" onclick="join()">
+            <img src="/img/member/btn_cancel.gif" onclick="reset()">
         </div>
 
     </div>
 </body>
 <div id="footer"></div>
 
+<script>
+  function join() {
+    var form = document.joinForm;
+    form.submit();
+  }
+
+  function reset() {
+    var form = document.joinForm;
+    form.reset(); // 입력지움.
+  }
+
+</script>
 </body>
 </html>
