--- a/member/namecheck.html
+++ b/member/namecheck.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>회운가입 여부 및 실명확인</title>
+  <title>회원가입 여부 및 실명확인</title>
 
   <link rel="stylesheet" href="/css/member/namecheck.css">
 
@@ -14,11 +14,12 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 
-<script>
-    function joinpass () {
-        window.open ("join3.html","회원가입란");}
-</script>
-  
+  <script>
+    function join() {
+        window.open("join2.html","회원가입2")
+    }
+  </script>
+
 </head>
 <!-- 회원가입 여부 및 실명 확인 -->
 
@@ -35,13 +36,14 @@
 </div>
 
 <div class="joinbutton">
-    <button id="buttona" >
-        <img src="/img/member/btn_join.gif" onclick="joinpass()">
+    <button id="buttona" onclick="join()">
+        <img src="/img/member/btn_join.gif" alt="">
+        
             </button>
 </div>
 
 <div class="closebutton">
-    <button id="buttonb"  ><img src="/img/member/btn_close.gif" ></button>
+    <button id="buttonb"><img src="/img/member/btn_close.gif" alt="" onclick="self.close()"></button>
 </div>
 
 </div>
