--- a/company/company01.html
+++ b/company/company01.html
@@ -93,82 +93,129 @@
   </nav>
 
   <!-- 회사개요 -->
-  <div class="tlt-001">회사개요</div>
-  <div class="tlt-002">The design and maintenance are excellent.</div>
-  <div class="tlt-003">고객과의 신뢰와 디자인 가치 창출을, 최우선으로 생각합니다.</div>
-  <div class="tlt-004">디자인을 통한 비지니스 네트워크를 구축하여 고객의 필요와 요구를 파악하고 기존 사업과 연계하여 시너지를 창출하며 고객 감동을 실현해 나갈 것입니다. 파이브스톤은 다양한 환경에 적응하며 경쟁하기 위해 모든 기술과 디자인 역량을 집중하고 고객과의 친밀한 소통과 협력을 통해 최고의 품질을 제공하고 있습니다.</div>
-  <img src="/img/company/img0101.gif" class="imgs-001" >
+<div class="company-outline">
+      <div class="com-summary">
+        <h2> 회사개요</h2>
+          <p> The design and maintenance are excellent.</p>
+      </div>
+
+      <div class="com-explain">
+        <h5>고객과의 신뢰와 디자인 가치 창출을, 최우선으로 생각합니다.</h5>
+          <p>디자인을 통한 비지니스 네트워크를 구축하여 고객의 필요와 요구를 파악하고 
+            기존 사업과 연계하여 시너지를 창출하며 고객 감동을 실현해 나갈 것입니다.<br>
+            파이브스톤은 다양한 환경에 적응하며 경쟁하기 위해 모든 기술과 디자인 역량을 집중하고 
+            고객과의 친밀한 소통과 협력을 통해 최고의 품질을 제공하고 있습니다.</p>
+      </div>
+
+      <div class="img-promise"> 
+        <img src="/img/company/img0101.gif" class="com-img">
+      </div>
+
+      <div class="com-outline">
+
+        <div class="image">
+          <div class="more">
+            <img src="/img/company/img0102.jpg" class="com-img1" >
+          </div>
+        </div>
+
+        <div class="explain">
+          <div class="more1">
+            <h2>파이브스톤은 끊임없는 열정으로 디자인 가치를 창조합니다.</h2>
+              <p> 파이브스톤은 다양한 환경에 적응하며 경쟁하기 위해 
+                모든 기술과 디자인 역량을 집중하고 고객과의 친밀한 소통과 협력을 통해 
+                최고의 품질을 제공하고 있습니다. 
+                오랫동안 쌓은 전문지식과 노하우를 바탕으로 고객과 함께하겠습니다.</p>
+
+              <li>회 사 : <span style="color:red;">파이브스톤(FIVESTONE Company)</span></li>
+              <li>업 종 : 홈페이지제작 </li>
+              <li>사 업 : 기업 홈페이지 구축(반응형웹, 모바일웹), 디자인, 그래픽</li> 
+              <li>비 전 : 정직과 신뢰를 기반으로 한 디자인 가치창출</li> 
+              <li>대 표 : 김성용</li>
+          </div>
+        </div>
+
+      </div>
 
   <!-- 비젼 -->
-  <div id="box1">
-    <img src="/img/company/img0102.jpg" class="imgs-002" >
-   <div><p style="font-weight: bold; font-size: 30px;">파이브스톤은 끊임없는 열정으로
-      디자인 가치를 창조합니다.</p> <br> <br>
-       <p> 파이브스톤은 다양한 환경에 적응하며 경쟁하기 위해 모든 기술과 디자인 역량을 집중하고 고객과의 친밀한 소통과 협력을 통해 최고의 품질을 제공하고 있습니다. 오랫동안 쌓은 전문지식과 노하우를 바탕으로 고객과 함께하겠습니다. </p>
-        <li>회 사 : <span style="color:red;">파이브스톤(FIVESTONE Company)</span> </li>
-        <li>업 종 : 홈페이지제작 </li>
-        <li>사 업 : 기업 홈페이지 구축(반응형웹, 모바일웹), 디자인, 그래픽</li> 
-        <li>비 전 : 정직과 신뢰를 기반으로 한 디자인 가치창출</li> 
-        <li>대 표 : 김성용</li></div>
-    
-  </div>
+<div class="vision">
+        <div class="vi-outline">
+          <h2>VISION</h2>
+            <p>파이브스톤은 정직과 신뢰 디자인으로 고객과 함께합니다.</p>
+        </div>
+
+    <div class="img-box">
+
+          <div class="img1">
+            <img src="/img/company/img0103.png">
+              <h3>CREATIVE</h3>
+                <h5>파이브스톤은 창조적인 디자인으로 고객과 함께합니다.</h5>
+          </div>
+
+          <div class="img1">
+            <img src="/img/company/img0104.png" >
+              <h3>CONFIDENCE</h3>
+                <h5>파이브스톤은 고객과의 신뢰를 최우선으로 생각합니다.</h5>
+          </div>
+
+        <div class="img1">
+            <img src="/img/company/img0105.png" >
+              <h3>PARTNERSHIP</h3>
+                <h5>파이브스톤은 고객과의 협력을 통해 파트너쉽을 쌓아갑니다.</h5>
+        </div>
+
+        <div class="img1">
+            <img src="/img/company/img0105.png" >
+              <h3>PASSION</h3>
+                <h5>파이브스톤은 끊임없는 열정으로 고객과 함께 성장합니다.</h5>
+        </div>
+
+    </div>
+
+</div>
 
   <!-- 역사 -->
-  
-  <div>
-    <div class="tlt-005">VISION</div>
-    <div class="tlt-006">파이브스톤은 정직과 신뢰 디자인으로 고객과 함께합니다.</div>
-    </div>
-    <div id="box2">
-    <div class="tlt-007">
-      <img src="/img/company/img0103.png">
-      <h3>CREATIVE</h3>
-      <h5>파이브스톤은 창조적인 디자인으로 고객과 함께합니다.</h5>
-  </div>
-   <div class="tlt-007">
-     <img src="/img/company/img0104.png" >
-     <h3>CONFIDENCE</h3>
-     <h5>파이브스톤은 고객과의 신뢰를 최우선으로 생각합니다.</h5>
-   </div>
-   <div class="tlt-007">
-      <img src="/img/company/img0105.png" >
-      <h3>PARTNERSHIP</h3>
-      <h5>파이브스톤은 고객과의 협력을 통해 파트너쉽을 쌓아갑니다.</h5>
-   </div>
-   <div class="tlt-007">
-      <img src="/img/company/img0105.png" >
-     <h3>PASSION</h3>
-     <h5>파이브스톤은 끊임없는 열정으로 고객과 함께 성장합니다.</h5>
-   </div>
-    </div>
- 
 
-  <div class="line-001"></div>
-  <div>
-    <div class="xtx-001">HISTORY</div>
-    <div class="xtx-002">설립이후 파이브스톤이 걸어온 길을 알립니다.</div>
-    <div>
-      <ul class="foo-001">2017</ul>
-      <li>10 <span id="sp-01">정직과 신뢰의 기업 파이브스톤</span></li>
-      <li>06 <span id="sp-01">홈페이지 구축을 위한 최고의 선택 파이브스톤</span></li>
-      <li>05 <span id="sp-01">함께 할 수 있는 좋은 친구 파이브스톤</span></li>
-    </div>
-    <div>
-      <ul class="foo-001">2016</ul>
-      <li>10 <span id="sp-01">정직과 신뢰의 기업 파이브스톤</span></li>
-      <li>06 <span id="sp-01">홈페이지 구축을 위한 최고의 선택 파이브스톤</span></li>
-      <li>05 <span id="sp-01">함께 할 수 있는 좋은 친구 파이브스톤</span></li>
-    </div>
-    <div>
-      <ul class="foo-001">2015</ul>
-      <li>10 <span id="sp-01">정직과 신뢰의 기업 파이브스톤</span></li>
-      <li>06 <span id="sp-01">홈페이지 구축을 위한 최고의 선택 파이브스톤</span></li>
-      <li>05 <span id="sp-01">함께 할 수 있는 좋은 친구 파이브스톤</span></li>
-    </div>
-  </div>
-  </div>
-  
+        <hr>
 
+        <div class="history container">
+
+          <div class="his-list">
+
+          <div class="his-pro">
+            <h2>HISTORY</h2>
+            <p>설립이후 파이브스톤이 걸어온 길을 알립니다.</p>
+          </div>
+
+          <div class="box" >
+            <ul class="year">2017</ul>
+            <li>10 <span id="sp-01">정직과 신뢰의 기업 파이브스톤</span></li>
+            <li>06 <span id="sp-01">홈페이지 구축을 위한 최고의 선택 파이브스톤</span></li>
+            <li>05 <span id="sp-01">함께 할 수 있는 좋은 친구 파이브스톤</span></li>
+          </div>
+
+          <div class="line"></div>
+
+          <div class="box">
+            <ul class="year">2016</ul>
+            <li>10 <span id="sp-01">정직과 신뢰의 기업 파이브스톤</span></li>
+            <li>06 <span id="sp-01">홈페이지 구축을 위한 최고의 선택 파이브스톤</span></li>
+            <li>05 <span id="sp-01">함께 할 수 있는 좋은 친구 파이브스톤</span></li>
+          </div>
+
+          <div class="line"></div>
+
+          <div class="box">
+            <ul class="year">2015</ul>
+            <li>10 <span id="sp-01">정직과 신뢰의 기업 파이브스톤</span></li>
+            <li>06 <span id="sp-01">홈페이지 구축을 위한 최고의 선택 파이브스톤</span></li>
+            <li>05 <span id="sp-01">함께 할 수 있는 좋은 친구 파이브스톤</span></li>
+          </div>
+
+
+        </div>
+      </div>
+  
   <!-- 푸터 -->
   <div id="footer"></div>
 
