--- a/company/company03.html
+++ b/company/company03.html
@@ -91,11 +91,11 @@
   </nav>
  
   <!-- 오시는길 -->
-  <div class="ad">
+  <div class="ad container" >
     <div class="dc">오시는길</div>
     <div class="cb">The design and maintenance are excellent.</div>
-    <iframe class="map-responsive" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6324.563810084839!2d126.97445!3d37.571979!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca2dc47fe6aab%3A0x98bcae2cdee877b1!2z7ISc7Jq47Yq567OE7IucIOyiheuhnOq1rCDsooXroZwxLjIuMy406rCA64-ZIDExOQ!5e0!3m2!1sko!2skr!4v1656640781557!5m2!1sko!2skr" 
-    width="990" height="450" style="border:0;" allowfullscreen="" loading="lazy"  referrerpolicy="no-referrer-when-downgrade">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6324.563810084839!2d126.97445!3d37.571979!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca2dc47fe6aab%3A0x98bcae2cdee877b1!2z7ISc7Jq47Yq567OE7IucIOyiheuhnOq1rCDsooXroZwxLjIuMy406rCA64-ZIDExOQ!5e0!3m2!1sko!2skr!4v1656640781557!5m2!1sko!2skr" 
+    width="990" height="450" style="border:0; margin-bottom: 100px;" allowfullscreen="" loading="lazy"  referrerpolicy="no-referrer-when-downgrade">
     </iframe>
     
     <div class="companyMapContent">
