--- a/company/company03.html
+++ b/company/company03.html
@@ -7,9 +7,9 @@
   <title>오시는길</title>
 
   <!-- Main CSS : Header, Main, Footer -->
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/common.css">
-  <link rel="stylesheet" href="/css/company/company03.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/common.css">
+  <link rel="stylesheet" href="../css/company/company03.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -19,9 +19,9 @@
 
   <script>
     $(document).ready(function(){
-      $('#headerTop').load("/headerTop.html");
-      $('#header').load("/header.html");     
-      $('#footer').load("/footer.html");
+      $('#headerTop').load("../headerTop-sub.html");
+      $('#header').load("../header-sub.html");     
+      $('#footer').load("../footer-sub.html");
     });
   </script>
 
@@ -37,21 +37,21 @@
   <!-- COMMON -->
   <div class="commonSection1">
     <div class="commonContent1">
-      <img src="/img/member/sub-visual01.jpg" 
+      <img src="../img/member/sub-visual01.jpg" 
           style="width: 100%; height: 100%;">
       <div class="commonContent2 text-center">
         <div>
           <h3>COMPANY</h3>
         </div>
         <div>
-          <p><img src="/img/icon-home.png"> > 회사소개 > 오시는길</p>
+          <p><img src="../img/icon-home.png"> > 회사소개 > 오시는길</p>
         </div>
       </div>
     </div>
   </div>
   <!-- COMMON - 드랍다운 -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/index.html"><button class="homeBtn">H</button></a>
+    <a class="navbar-brand" href="../index.html"><button class="homeBtn">H</button></a>
       <ul class="navbar-nav mr-auto my-2 my-lg-0 navbar-nav-scroll" 
           style="max-height: 100px;">
         
@@ -91,31 +91,36 @@
   </nav>
  
   <!-- 오시는길 -->
-  <div class="ad container" >
-    <div class="dc">오시는길</div>
-    <div class="cb">The design and maintenance are excellent.</div>
+
+  <div class="map container" >
+
+    <h2>오시는길</h2>
+    <p>The design and maintenance are excellent.</p>
+
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6324.563810084839!2d126.97445!3d37.571979!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca2dc47fe6aab%3A0x98bcae2cdee877b1!2z7ISc7Jq47Yq567OE7IucIOyiheuhnOq1rCDsooXroZwxLjIuMy406rCA64-ZIDExOQ!5e0!3m2!1sko!2skr!4v1656640781557!5m2!1sko!2skr" 
     width="990" height="450" style="border:0; margin-bottom: 100px;" allowfullscreen="" loading="lazy"  referrerpolicy="no-referrer-when-downgrade">
     </iframe>
     
     <div class="companyMapContent">
-      <table border="1" class="t1">
+
+      <table>
         <tr>
-          <td class="t2" style="width: 100px;">주소</td>
-          <td class="t3">경기도 고양시 삼송로 193번길 28-3 하준빌딩 401호</td>
+          <th>주소</th>
+          <td >경기도 고양시 삼송로 193번길 28-3 하준빌딩 401호</td>
         </tr>
 
         <tr>
-        <td class="t2">연락처</td>
-        <td class="t3">010-2709-0828</td>
+        <th>연락처</th>
+        <td>010-2709-0828</td>
       </tr>
 
       <tr>
-        <td class="t2">이메일</td>
-        <td class="t3">fivestone55@daum.net</td>
+        <th>이메일</th>
+        <td>fivestone55@daum.net</td>
       </tr>
 
     </table>
+
     </div>
 
   </div>
