--- a/member/namecheck.html
+++ b/member/namecheck.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>회원가입 여부 및 실명확인</title>
 
-  <link rel="stylesheet" href="/css/member/namecheck.css">
+  <link rel="stylesheet" href="../css/member/namecheck.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -37,13 +37,13 @@
 
 <div class="joinbutton">
     <button id="buttona" onclick="join()">
-        <img src="/img/member/btn_join.gif" alt="">
+        <img src="../img/member/btn_join.gif" alt="">
         
             </button>
 </div>
 
 <div class="closebutton">
-    <button id="buttonb"><img src="/img/member/btn_close.gif" alt="" onclick="self.close()"></button>
+    <button id="buttonb"><img src="../img/member/btn_close.gif" alt="" onclick="self.close()"></button>
 </div>
 
 </div>
