--- a/business/business01.html
+++ b/business/business01.html
@@ -7,9 +7,9 @@
   <title>사업분야01</title>
 
   <!-- Main CSS : Header, Main, Footer -->
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/common.css">
-  <link rel="stylesheet" href="/css/business/business01.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/common.css">
+  <link rel="stylesheet" href="../css/business/business01.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -19,9 +19,9 @@
 
   <script>
     $(document).ready(function(){
-      $('#headerTop').load("/headerTop.html");
-      $('#header').load("/header.html");     
-      $('#footer').load("/footer.html");
+      $('#headerTop').load("../headerTop-sub.html");
+      $('#header').load("../header-sub.html");     
+      $('#footer').load("../footer-sub.html");
     });
   </script>
 
@@ -36,21 +36,21 @@
   <!-- COMMON -->
   <div class="commonSection1">
     <div class="commonContent1">
-      <img src="/img/member/sub-visual02.jpg" 
+      <img src="../img/member/sub-visual02.jpg" 
           style="width: 100%; height: 100%;">
       <div class="commonContent2 text-center">
         <div>
           <h3>BUSINESS</h3>
         </div>
         <div>
-          <p><img src="/img/icon-home.png"> > 사업분야 > 사업분야01</p>
+          <p><img src="../img/icon-home.png"> > 사업분야 > 사업분야01</p>
         </div>
       </div>
     </div>
   </div>
   <!-- COMMON - 드랍다운 -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/index.html"><button class="homeBtn">H</button></a>
+    <a class="navbar-brand" href="../index.html"><button class="homeBtn">H</button></a>
       <ul class="navbar-nav mr-auto navbar-nav-scroll" 
           style="max-height: 100px;">
         
@@ -89,7 +89,7 @@
     </div>
   </nav>
 
-  <!--사업분야01 -->
+  <!--사업분야01 --> 
   
   <div class="whole">
 
@@ -109,7 +109,7 @@
               
 
        <div class="business-wrap">
-        <img src="/img/buisness/img0101.jpg" alt="" class="img"> 
+        <img src="../img/buisness/img0101.jpg" alt="" class="img"> 
         <div class="busi_title">
           기업홍보/광고/서비스
         </div>
@@ -123,7 +123,7 @@
                </div>
  
         <div class="business-wrap">
-          <img src="/img/buisness/img0102.jpg" alt="" class="img">
+          <img src="../img/buisness/img0102.jpg" alt="" class="img">
             <div class="busi_title">
               패션/웨딩/헤어/미용
                 </div>
@@ -139,7 +139,7 @@
                 </div>
 
         <div class="business-wrap">
-          <img src="/img/buisness/img0103.jpg" alt="" class="img">
+          <img src="../img/buisness/img0103.jpg" alt="" class="img">
             <div class="busi_title">
               식품/요리/음식/건강
                 </div>
