--- a/customer/customer02.html
+++ b/customer/customer02.html
@@ -7,9 +7,9 @@
   <title>묻고답하기</title>
 
   <!-- Main CSS : Header, Main, Footer -->
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/common.css">
-  <link rel="stylesheet" href="/css/customer/customer02.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/common.css">
+  <link rel="stylesheet" href="../css/customer/customer02.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -19,13 +19,21 @@
 
   <script>
     $(document).ready(function(){
-      $('#headerTop').load("/headerTop.html");
-      $('#header').load("/header.html");     
-      $('#footer').load("/footer.html");
+      $('#headerTop').load("../headerTop-sub.html");
+      $('#header').load("../header-sub.html");     
+      $('#footer').load("../footer-sub.html");
     });
 
     function pwcheck () {
       window.open("customer02_3.html","비밀번호입력" , "width=500, height=500")
+    };
+
+    function writebutton () {
+      window.open ("customer02_2.html", "글쓰기페이지")
+    };
+
+    function searchbutton () {
+      alert ("검색어를 정확히 입력하세요.")
     };
   </script>
 
@@ -40,21 +48,21 @@
   <!-- COMMON -->
   <div class="commonSection1">
     <div class="commonContent1">
-      <img src="/img/member/sub-visual02.jpg" 
+      <img src="../img/member/sub-visual02.jpg" 
           style="width: 100%; height: 100%;">
       <div class="commonContent2 text-center">
         <div>
           <h3>COSTOMER</h3>
         </div>
         <div>
-          <p><img src="/img/icon-home.png"> > 고객지원 > 묻고답하기</p>
+          <p><img src="../img/icon-home.png"> > 고객지원 > 묻고답하기</p>
         </div>
       </div>
     </div>
   </div>
   <!-- COMMON - 드랍다운 -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/index.html"><button class="homeBtn">H</button></a>
+    <a class="navbar-brand" href="../index.html"><button class="homeBtn">H</button></a>
       <ul class="navbar-nav mr-auto navbar-nav-scroll" 
           style="max-height: 100px;">
         
@@ -82,11 +90,11 @@
               묻고답하기
           </a>
           <ul class="dropdown-menu asd">
-            <li><a class="dropdown-item" href="/customer/costomer01.html">1:1문의</a></li>
+            <li><a class="dropdown-item" href="../customer/costomer01.html">1:1문의</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/customer/costomer02.html">묻고답하기</a></li>
+            <li><a class="dropdown-item" href="../customer/costomer02.html">묻고답하기</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/customer/costomer03.html">FAQ</a></li>
+            <li><a class="dropdown-item" href="../customer/costomer03.html">FAQ</a></li>
           </ul>
         </li>
       </ul>
@@ -109,63 +117,63 @@
         </tr>
         <tr>
           <td class="num">9</td>
-          <td onclick="pwcheck()"><img src="/img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
+          <td onclick="pwcheck()"><img src="../img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
           <td class="writer" >loaker</td>
           <td class="dat" >2022-07-04</td>
         </tr>
 
         <tr>
           <td class="num">8</td>
-          <td onclick="pwcheck()" ><img src="/img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
+          <td onclick="pwcheck()" ><img src="../img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
           <td class="writer" >loaker</td>
           <td class="dat" >2022-07-04</td>
         </tr>
 
         <tr>
           <td class="num">7</td>
-          <td onclick="pwcheck()" ><img src="/img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
+          <td onclick="pwcheck()" ><img src="../img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
           <td class="writer" >loaker</td>
           <td class="dat" >2022-07-04</td>
         </tr>
 
         <tr>
           <td class="num" >6</td>
-          <td onclick="pwcheck()" ><img src="/img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
+          <td onclick="pwcheck()" ><img src="../img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
           <td class="writer" >loaker</td>
           <td class="dat" >2022-07-04</td>
         </tr>
 
         <tr>
           <td class="num">5</td>
-          <td onclick="pwcheck()" ><img src="/img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
+          <td onclick="pwcheck()" ><img src="../img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
           <td class="writer" >loaker</td>
           <td class="dat" >2022-07-04</td>
         </tr>
 
         <tr>
           <td class="num" >4</td>
-          <td onclick="pwcheck()" ><img src="/img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
+          <td onclick="pwcheck()" ><img src="../img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
           <td class="writer" >loaker</td>
           <td class="dat" >2022-07-04</td>
         </tr>
 
         <tr>
           <td class="num" >3</td>
-          <td onclick="pwcheck()" ><img src="/img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
+          <td onclick="pwcheck()" ><img src="../img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
           <td class="writer" >loaker</td>
           <td class="dat" >2022-07-04</td>
         </tr>
 
         <tr>
           <td class="num" >2</td>
-          <td onclick="pwcheck()" ><img src="/img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
+          <td onclick="pwcheck()" ><img src="../img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
           <td class="writer" >loaker</td>
           <td class="dat" >2022-07-04</td>
         </tr>
 
         <tr>
           <td class="num" >1</td>
-          <td onclick="pwcheck()" ><img src="/img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
+          <td onclick="pwcheck()" ><img src="../img/customer/icon_sct.gif">문의사항에 대해 자세한 답변 부탁합니다.</td>
           <td class="writer">loaker</td>
           <td class="dat">2022-07-04</td>
         </tr>
@@ -173,7 +181,7 @@
     </div>
 
     <div class="writebutton">
-      <img src="/img/customer/write.gif" alt="">
+      <img src="../img/customer/write.gif" style="cursor: pointer;" onclick="writebutton()">
     </div>
 
   <!-- search bar -->
@@ -184,7 +192,7 @@
       <option value="3" id="opt">작성자</option>
     </select>
     <input type="text">
-    <button class="but" href="#"><img src="/img/product/search.gif"></a></button>
+    <button class="but" onclick="searchbutton()"><img src="../img/product/search.gif"></button>
   </div>
 
   <!-- 푸터 -->
