--- a/customer/customer02_2.html
+++ b/customer/customer02_2.html
@@ -7,9 +7,9 @@
   <title>묻고답하기</title>
 
   <!-- Main CSS : Header, Main, Footer -->
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/common.css">
-  <link rel="stylesheet" href="/css/customer/write.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/common.css">
+  <link rel="stylesheet" href="../css/customer/write.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -28,10 +28,22 @@
 
   <script>
     $(document).ready(function(){
-      $('#headerTop').load("/headerTop.html");
-      $('#header').load("/header.html");     
-      $('#footer').load("/footer.html");
+      $('#headerTop').load("../headerTop-sub.html");
+      $('#header').load("../header-sub.html");     
+      $('#footer').load("../footer-sub.html");
     });
+
+    function listbutton() {
+      window.open ("customer02.html","이전화면")
+    };
+
+    function confirmbutton () {
+      alert("등록되었습니다.")
+    }
+
+    function cancelbutton (){
+      window.open ("customer02.html","이전화면")
+    }
   </script>
 
 </head>
@@ -45,21 +57,21 @@
   <!-- COMMON -->
   <div class="commonSection1">
     <div class="commonContent1">
-      <img src="/img/member/sub-visual02.jpg" 
+      <img src="../img/member/sub-visual02.jpg" 
           style="width: 100%; height: 100%;">
       <div class="commonContent2 text-center">
         <div>
           <h3>COSTOMER</h3>
         </div>
         <div>
-          <p><img src="/img/icon-home.png"> > 고객지원 > 묻고답하기</p>
+          <p><img src="../img/icon-home.png"> > 고객지원 > 묻고답하기</p>
         </div>
       </div>
     </div>
   </div>
   <!-- COMMON - 드랍다운 -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/index.html"><button class="homeBtn">H</button></a>
+    <a class="navbar-brand" href="../index.html"><button class="homeBtn">H</button></a>
       <ul class="navbar-nav mr-auto navbar-nav-scroll" 
           style="max-height: 100px;">
         
@@ -87,11 +99,11 @@
               묻고답하기
           </a>
           <ul class="dropdown-menu asd">
-            <li><a class="dropdown-item" href="/customer/costomer01.html">1:1문의</a></li>
+            <li><a class="dropdown-item" href="../customer/costomer01.html">1:1문의</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/customer/costomer02.html">묻고답하기</a></li>
+            <li><a class="dropdown-item" href="../customer/costomer02.html">묻고답하기</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/customer/costomer03.html">FAQ</a></li>
+            <li><a class="dropdown-item" href="../customer/costomer03.html">FAQ</a></li>
           </ul>
         </li>
       </ul>
@@ -135,9 +147,9 @@
 </div>
 
 <div class= "container" style="display: flex; flex-direction: row; justify-content: space-between; margin-top: 15px; margin-bottom: 100px; ">
-  <img src="/img/product/list.gif">
-  <div > <img src="/img/member/btn_confirm.gif">
-  <img src="/img/member/btn_cancel.gif"></div>
+  <img src="../img/product/list.gif" style="cursor: pointer;" onclick="listbutton()">
+  <div > <img src="../img/member/btn_confirm.gif" style="cursor: pointer;" onclick="confirmbutton()" >
+  <img src="../img/member/btn_cancel.gif" style="cursor: pointer;" onclick="cancelbutton()" ></div>
 </div>
 
   </div>
