--- a/footer-sub.html
+++ b/footer-sub.html
@@ -2,11 +2,11 @@
 <div class="footer">
   <div class="container text-center">
     <div>
-    <a href="./company/company01.html">회사소개</a>
+    <a href="../company/company01.html">회사소개</a>
     <a href="#">개인정보보호정책</a>
     <a href="#">이메일부단수집거부</a>
-    <a href="./customer/customer02.html">묻고답하기</a>
-    <a href="./company/company03.html">오시는길</a>
+    <a href="../customer/customer02.html">묻고답하기</a>
+    <a href="../company/company03.html">오시는길</a>
   </div>
 
   <div>
@@ -14,10 +14,10 @@
     고객지원 : 010-2709-0828. FAX : 070-777-555. EMAIL : fivestone@duam.net. 사업자등록번호 : 780-42-00047. 통신판매업 : 제2015-경기-00974호</span>
     <span>class="copyright">COPYRIGHT(C) 2020 FIVESTONE. ALL RIGHT RESERVED.</span>
     <br>
-    <img src="./img/mf-icon01.png" >
-    <img src="./img/mf-icon02.png" >
-    <img src="./img/mf-icon03.png" >
-    <img src="./img/mf-icon04.png" >
+    <img src="../img/mf-icon01.png" >
+    <img src="../img/mf-icon02.png" >
+    <img src="../img/mf-icon03.png" >
+    <img src="../img/mf-icon04.png" >
   </div>
 
   </div>
