--- a/js/member/join3.html
+++ b/js/member/join3.html
@@ -7,9 +7,9 @@
   <title>회원가입2</title>
 
   <!-- Main CSS : Header, Main, Footer -->
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/common.css">
-  <link rel="stylesheet" href="/css/member/join3.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/common.css">
+  <link rel="stylesheet" href="../css/member/join3.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -35,14 +35,14 @@
   <!-- COMMON -->
   <div class="commonSection1">
     <div class="commonContent1">
-      <img src="/img/member/sub-visual02.jpg" 
+      <img src="../img/member/sub-visual02.jpg" 
           style="width: 100%; height: 100%;">
       <div class="commonContent2 text-center">
         <div>
           <h3>MEMBER</h3>
         </div>
         <div>
-          <p><img src="/img/icon-home.png"> > 회원가입</p>
+          <p><img src="../img/icon-home.png"> > 회원가입</p>
         </div>
       </div>
     </div>
@@ -74,7 +74,7 @@
             <table border="1" >
                 <tr id="tr1" >
                    <td id="td1" ><span>아이디</span></td> 
-                   <td id="td2" ><input type="text" style="width: 130px;"><img src="/img/member/btn_iddupl.gif" alt="" style="margin-left: 10px; "><span>  (영문 소문자, 숫자4~16자)</span></td>
+                   <td id="td2" ><input type="text" style="width: 130px;"><img src="../img/member/btn_iddupl.gif" alt="" style="margin-left: 10px; "><span>  (영문 소문자, 숫자4~16자)</span></td>
                 </tr>
 
                 <tr id="tr1" >  
@@ -148,8 +148,8 @@
 
 
         <div class="abcd">
-            <img src="/img/member/btn_confirm.gif" alt="">
-            <img src="/img/member/btn_cancel.gif" alt="">
+            <img src="../img/member/btn_confirm.gif" alt="">
+            <img src="../img/member/btn_cancel.gif" alt="">
         </div>
 
     </div>
