--- a/js/member/passwordFind.html
+++ b/js/member/passwordFind.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>회원비밀번호 찾기</title>
 
-  <link rel="stylesheet" href="/css/member/passwordFind.css">
+  <link rel="stylesheet" href="../css/member/passwordFind.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -30,21 +30,21 @@
     <div class="find2">
         <div>
             <div>
-              <img src="/img/member/txt_join1.gif" alt="">
+              <img src="../img/member/txt_join1.gif" alt="">
               <input id="a" type="text" style="width: 150px; height: 20px;">
             </div>
         </div>
 
         <div>
             <div>
-              <img src="/img/member/txt_login_01.gif" >
+              <img src="../img/member/txt_login_01.gif" >
               <input id="b" type="text" style="width: 150px; height: 20px;">
             </div>
         </div>
 
         <div>
             <div>
-              <img src="/img/member/txt_email.gif" alt="">
+              <img src="../img/member/txt_email.gif" alt="">
               <input id="c" type="text" style="width: 200px; height: 20px;">
             </div>
           </div>
@@ -52,13 +52,13 @@
 
           <div class="find3">
             <button class="button1">
-              <img src="/img/member/btn_confirm_gif.gif">
+              <img src="../img/member/btn_confirm_gif.gif">
                 </button><br> 
           </div>
   
           <div class="find4">
             <button class="button2">
-              <img src="/img/member/btn_close.gif">
+              <img src="../img/member/btn_close.gif">
                 </button>
           </div>
   </div>
