--- a/js/product/product01.html
+++ b/js/product/product01.html
@@ -7,9 +7,9 @@
   <title>제품안내01</title>
 
   <!-- Main CSS : Header, Main, Footer -->
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/common.css">
-  <link rel="stylesheet" href="/css/product/product01.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/common.css">
+  <link rel="stylesheet" href="../css/product/product01.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -36,21 +36,21 @@
   <!-- COMMON -->
   <div class="commonSection1">
     <div class="commonContent1">
-      <img src="/img/member/sub-visual02.jpg" 
+      <img src="../img/member/sub-visual02.jpg" 
           style="width: 100%; height: 100%;">
       <div class="commonContent2 text-center">
         <div>
           <h3>PRODUCT</h3>
         </div>
         <div>
-          <p><img src="/img/icon-home.png"> > 제품안내 > 제품안내01</p>
+          <p><img src="../img/icon-home.png"> > 제품안내 > 제품안내01</p>
         </div>
       </div>
     </div>
   </div>
   <!-- COMMON - 드랍다운 -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/index.html"><button class="homeBtn">H</button></a>
+    <a class="navbar-brand" href="../index.html"><button class="homeBtn">H</button></a>
       <ul class="navbar-nav mr-auto navbar-nav-scroll" 
           style="max-height: 100px;">
         
@@ -98,19 +98,19 @@
             <div class="image1">
 
             <div class="img1">
-                <img src="/img/product/1.jpg" >
+                <img src="../img/product/1.jpg" >
                   <p>FS108</p>
                     </div>
             <div class="img1">
-                <img src="/img/product/2.jpg">
+                <img src="../img/product/2.jpg">
                   <p>FS107</p>
                     </div>
             <div class="img1">
-                <img src="/img/product/3.jpg">
+                <img src="../img/product/3.jpg">
                   <p>FS106</p>
                     </div>
             <div class="img1">
-                <img src="/img/product/4.jpg">
+                <img src="../img/product/4.jpg">
                   <p>FS105</p>  
                     </div>
             </div>
@@ -118,19 +118,19 @@
             <div class="image2">
 
             <div class="img2">
-                <img src="/img/product/5.jpg">
+                <img src="../img/product/5.jpg">
                     <p>FS104</p>
                       </div>
             <div class="img2">
-                <img src="/img/product/6.jpg">
+                <img src="../img/product/6.jpg">
                     <p>FS103</p>
                       </div>
             <div class="img2">
-                <img src="/img/product/7.jpg">
+                <img src="../img/product/7.jpg">
                     <p>FS102</p>
                       </div>
             <div class="img2">
-                <img src="/img/product/8.jpg">
+                <img src="../img/product/8.jpg">
                   <p>FS101</p>
                       </div>
             </div>
@@ -149,7 +149,7 @@
 
       <input type="text">
 
-      <button class="but" href="#"><img src="/img/product/search.gif"></a></button>
+      <button class="but" href="#"><img src="../img/product/search.gif"></a></button>
   </div>
 
 
