--- a/member/join3.html
+++ b/member/join3.html
@@ -7,9 +7,9 @@
   <title>회원가입2</title>
 
   <!-- Main CSS : Header, Main, Footer -->
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/common.css">
-  <link rel="stylesheet" href="/css/member/join3.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/common.css">
+  <link rel="stylesheet" href="../css/member/join3.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -19,10 +19,14 @@
 
   <script>
     $(document).ready(function(){
-      $('#headerTop').load("/headerTop.html");
-      $('#header').load("/header.html");     
-      $('#footer').load("/footer.html");
+      $('#headerTop').load("../headerTop-sub.html");
+      $('#header').load("../header-sub.html");     
+      $('#footer').load("../footer-sub.html");
     });
+
+    function idsearch () {
+      window.open ("join4.html","아이디검색" , "width=480 height=380")
+    }
   </script>
 
 </head>
@@ -35,14 +39,14 @@
   <!-- COMMON -->
   <div class="commonSection1">
     <div class="commonContent1">
-      <img src="/img/member/sub-visual02.jpg" 
+      <img src="../img/member/sub-visual02.jpg" 
           style="width: 100%; height: 100%;">
       <div class="commonContent2 text-center">
         <div>
           <h3>MEMBER</h3>
         </div>
         <div>
-          <p><img src="/img/icon-home.png"> > 회원가입</p>
+          <p><img src="../img/icon-home.png"> > 회원가입</p>
         </div>
       </div>
     </div>
@@ -77,7 +81,10 @@
             <table border="1" >
                 <tr id="tr1" >
                    <td id="td1" ><span>아이디</span></td> 
-                   <td id="td2" ><input type="text" style="width: 130px;"><img src="/img/member/btn_iddupl.gif" alt="" style="margin-left: 10px; "><span>  (영문 소문자, 숫자4~16자)</span></td>
+                   <td id="td2" ><input type="text" style="width: 130px;">
+                    <img src="../img/member/btn_iddupl.gif" alt="" 
+                    style="margin-left: 10px; cursor:pointer;" onclick="idsearch()">
+                    <span>  (영문 소문자, 숫자4~16자)</span></td>
                 </tr>
 
                 <tr id="tr1" >  
@@ -151,8 +158,8 @@
 
 
         <div class="abcd">
-            <img src="/img/member/btn_confirm.gif" onclick="join()">
-            <img src="/img/member/btn_cancel.gif" onclick="reset()">
+            <img src="../img/member/btn_confirm.gif" onclick="join()" style="cursor: pointer;">
+            <img src="../img/member/btn_cancel.gif" onclick="reset()" style="cursor: pointer;">
         </div>
 
     </div>
