--- a/member/join4.html
+++ b/member/join4.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>비밀번호 확인</title>
+  <title>회원아이디 찾기</title>
 
-  <!-- My CSS -->
-  <link rel="stylesheet" href="../css/customer/customer02_3.css">
+  <link rel="stylesheet" href="../css/member/join4.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -16,37 +15,26 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 
   <script>
-
-   function confirm () {
-      alert ("비밀번호가 일치하지 않습니다. 다시 한번 확인해주세요." , "width=480, height=380")
-   }
-
+    function searchbutton () {
+        alert("아이디을(를) 숫자 및 영어로만 정확히 입력하세요. [4 ~ 16 글자]")
+    };
   </script>
 </head>
 <body>
-   
-   <div class="input">
-   
-   <div class="pw">
-      <p>비밀번호입력</p>
-   </div>
 
-   <div class="sentence1">
-    <p>글 작성시 입력한 비밀번호를 입력하세요.</p>
-   </div>
+<div class="box">
 
-   <div class="pwbox">
-    <img src="../img/customer/txt_pass.gif">
-    <input type="password">
-   </div>
+    <div class="checkid">
+        <p>아이디 중복확인</p>
+    </div>
 
-   <div class="confirmbutton">
-    <img src="../img/customer/btn_confirm.gif" onclick="confirm()">
-   </div>
+    <div class="inputid">
+        <p>원하는 아이디를 입력하세요.</p>
+    </div>
 
-   <div class="closebutton">
-    <img src="../img/customer/btn_close.gif" onclick="onclick= self.close()">
-   </div>
+    <div class="searchid">
+        <input type="text"> <img src="../img/member/btn_search.gif" onclick="searchbutton()" >
+    </div>
 
 </div>
 
