--- a/member/login.html
+++ b/member/login.html
@@ -7,9 +7,9 @@
   <title>로그인</title>
 
   <!-- Main CSS : Header, Main, Footer -->
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/common.css">
-  <link rel="stylesheet" href="/css/member/login.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/common.css">
+  <link rel="stylesheet" href="../css/member/login.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -19,9 +19,9 @@
 
   <script>
     $(document).ready(function(){
-      $('#headerTop').load("/headerTop.html");
-      $('#header').load("/header.html");     
-      $('#footer').load("/footer.html");
+      $('#headerTop').load("../headerTop-sub.html");
+      $('#header').load("../header-sub.html");     
+      $('#footer').load("../footer-sub.html");
     });
 
     function showpopup(){
@@ -42,14 +42,14 @@
   <!-- COMMON -->
   <div class="commonSection1">
     <div class="commonContent1">
-      <img src="/img/member/sub-visual01.jpg" 
+      <img src="../img/member/sub-visual01.jpg" 
           style="width: 100%; height: 100%;">
       <div class="commonContent2 text-center">
         <div>
           <h3>MEMBER</h3>
         </div>
         <div>
-          <p><img src="/img/icon-home.png"> > 로그인</p>
+          <p><img src="../img/icon-home.png"> > 로그인</p>
         </div>
       </div>
     </div>
@@ -92,7 +92,7 @@
   </div>
     </div>
 
-
+</div>
 
   <!-- 푸터 -->
   <div id="footer"></div>
