--- a/member/searchid.html
+++ b/member/searchid.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>회원아이디 찾기</title>
 
-  <link rel="stylesheet" href="/css/member/idFind.css">
+  <link rel="stylesheet" href="../css/member/idFind.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -26,11 +26,11 @@
 
 <div>
     <input type="text"> 
-    <img src="/img/member/btn_search.gif">
+    <img src="../img/member/btn_search.gif">
 </div>
 
 <div>
-    <img src="/img/member/btn_close.gif">
+    <img src="../img/member/btn_close.gif">
 </div>
 
 </body>
