--- a/product/product01.html
+++ b/product/product01.html
@@ -106,19 +106,19 @@
             <div class="image1">
 
             <div class="img1" >
-                <img src="../img/product/1.jpg" onclick="imagebutton()">
+                <img src="../img/product/1.jpg" onclick="imagebutton()" style="cursor: pointer;">
                   <p>FS108</p>
                     </div>
             <div class="img1">
-                <img src="../img/product/2.jpg" onclick="imagebutton()">
+                <img src="../img/product/2.jpg" onclick="imagebutton()" style="cursor: pointer;" >
                   <p>FS107</p>
                     </div>
             <div class="img1">
-                <img src="../img/product/3.jpg" onclick="imagebutton()">
+                <img src="../img/product/3.jpg" onclick="imagebutton()"style="cursor: pointer;" >
                   <p>FS106</p>
                     </div>
             <div class="img1">
-                <img src="../img/product/4.jpg" onclick="imagebutton()">
+                <img src="../img/product/4.jpg" onclick="imagebutton()"style="cursor: pointer;" >
                   <p>FS105</p>  
                     </div>
             </div>
@@ -126,19 +126,19 @@
             <div class="image2">
 
             <div class="img2">
-                <img src="../img/product/5.jpg" onclick="imagebutton()">
+                <img src="../img/product/5.jpg" onclick="imagebutton()" style="cursor: pointer;">
                     <p>FS104</p>
                       </div>
             <div class="img2">
-                <img src="../img/product/6.jpg" onclick="imagebutton()">
+                <img src="../img/product/6.jpg" onclick="imagebutton()" style="cursor: pointer;">
                     <p>FS103</p>
                       </div>
             <div class="img2">
-                <img src="../img/product/7.jpg" onclick="imagebutton()">
+                <img src="../img/product/7.jpg" onclick="imagebutton()" style="cursor: pointer;">
                     <p>FS102</p>
                       </div>
             <div class="img2">
-                <img src="../img/product/8.jpg" onclick="imagebutton()">
+                <img src="../img/product/8.jpg" onclick="imagebutton()"style="cursor: pointer;" >
                   <p>FS101</p>
                       </div>
             </div>
